fixed spacing on h3

--- a/css/screen.css
+++ b/css/screen.css
@@ -37,6 +37,10 @@ h2 {
 	margin-bottom: 1em;
 }
 
+h3 {
+	margin-top:1em;
+}
+
 p {
 	margin: 0 0 24px 0;
 	text-align: justify;
